--- a/Gallery_Web.csproj
+++ b/Gallery_Web.csproj
@@ -105,6 +105,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="1523304956_6a00e54ef4f376883401bb0875ae4b970d-800wi.png" />
     <Content Include="About.aspx" />
     <Content Include="App_Data\User.mdf" />
     <Content Include="App_Data\User_log.ldf">
@@ -128,6 +129,8 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="ImageData.aspx" />
+    <Content Include="Success-3-scaled.jpg" />
     <Content Include="WebForm1.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="HomePage.aspx" />
@@ -199,6 +202,13 @@
     </Compile>
     <Compile Include="HomePage.aspx.designer.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ImageData.aspx.cs">
+      <DependentUpon>ImageData.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ImageData.aspx.designer.cs">
+      <DependentUpon>ImageData.aspx</DependentUpon>
     </Compile>
     <Compile Include="LoginPage.aspx.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
